@@ -3743,6 +3743,14 @@ generally unrolls small loops.  You may want to try increasing
 --unroll-count (and occasionally --unroll-stmts) which will raise the small
 loop bar to avoid this error.
 
+=item BOUNDED
+
+This indicates that bounded queues (e.g. "var name[$ : 3]") are
+unsupported.
+
+Ignoring this warning may make Verilator simulations differ from other
+simulators.
+
 =item BSSPACE
 
 Warns that a backslash is followed by a space then a newline. Likely the
