@@ -116,11 +116,17 @@ AstNodeDType* V3ParseGrammar::createArray(AstNodeDType* basep,
             if (rangep && isPacked) {
                 arrayp = new AstPackArrayDType
                     (rangep->fileline(), VFlagChildDType(), arrayp, rangep);
-            } else if (rangep) {
-                if (VN_IS(rangep->leftp(), Unbounded)
-                    || VN_IS(rangep->rightp(), Unbounded)) {
-                    rangep->v3error("Unsupported: Bounded queues. Suggest use unbounded.");
+            } else if (VN_IS(nrangep, QueueRange)) {
+                arrayp = new AstQueueDType
+                    (nrangep->fileline(), VFlagChildDType(), arrayp);
+            } else if (rangep && (VN_IS(rangep->leftp(), Unbounded)
+                                  || VN_IS(rangep->rightp(), Unbounded))) {
+                if (!VN_IS(rangep->rightp(), Unbounded)) {
+                    rangep->v3warn(UNBOUNDED,
+                                   "Unsupported: Bounded queues. Converting to unbounded.");
                 }
+                arrayp = new AstQueueDType(nrangep->fileline(), VFlagChildDType(), arrayp);
+            } else if (rangep) {
                 arrayp = new AstUnpackArrayDType
                     (rangep->fileline(), VFlagChildDType(), arrayp, rangep);
             } else if (VN_IS(nrangep, UnsizedRange)) {
@@ -131,9 +137,6 @@ AstNodeDType* V3ParseGrammar::createArray(AstNodeDType* basep,
                 AstNodeDType* keyp = arangep->keyDTypep(); keyp->unlinkFrBack();
                 arrayp = new AstAssocArrayDType
                     (nrangep->fileline(), VFlagChildDType(), arrayp, keyp);
-            } else if (VN_IS(nrangep, QueueRange)) {
-                arrayp = new AstQueueDType
-                    (nrangep->fileline(), VFlagChildDType(), arrayp);
             } else {
                 UASSERT_OBJ(0, nrangep, "Expected range or unsized range");
             }
